--- a/java-ee-jsf/src/main/webapp/client_order.xhtml
+++ b/java-ee-jsf/src/main/webapp/client_order.xhtml
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
-    <title>Shopping application</title>
+    <title>Order</title>
 </h:head>
 
 <h:body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Products</a>
+        <a class="navbar-brand" href="#">Order</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,41 +36,29 @@
 
     <div class="container">
         <div class="row py-2">
-            <h:form id="productsForm">
-                <div class="col-12">
-                    <h:commandButton value="Add product" styleClass="btn btn-primary"
-                                     action="#{productController.createProduct()}"/>
-                </div>
+            <h:form id="orderForm">
 
                 <div class="col-12">
-                    <h:dataTable value="#{productController.allProducts}"
+                    <h:dataTable value="#{clientOrderController.order.getProducts}"
                                  styleClass="table table-bordered my-2"
                                  var="prod">
-                        <h:column>
-                            <f:facet name="header">Id</f:facet>
-                            #{prod.id}
-                        </h:column>
                         <h:column>
                             <f:facet name="header">Name</f:facet>
                             #{prod.name}
                         </h:column>
                         <h:column>
-                            <f:facet name="header">Description</f:facet>
-                            #{prod.description}
-                        </h:column>
-                        <h:column>
                             <f:facet name="header">Price</f:facet>
                             #{prod.price}
                         </h:column>
-                        <h:column>
-                            <f:facet name="header">Action</f:facet>
-                            <h:commandButton value="Edit" styleClass="btn btn-success"
-                                             action="#{productController.editProduct(prod)}"/>
-                            <h:commandButton value="Delete" styleClass="btn btn-danger"
-                                             action="#{productController.deleteProduct(prod)}">
-                                <f:ajax event="click" render="productsForm"/>
-                            </h:commandButton>
-                        </h:column>
+<!--                        <h:column>-->
+<!--                            <f:facet name="header">Action</f:facet>-->
+<!--                            <h:commandButton value="Edit" styleClass="btn btn-success"-->
+<!--                                             action="#{productController.editProduct(prod)}"/>-->
+<!--                            <h:commandButton value="Delete" styleClass="btn btn-danger"-->
+<!--                                             action="#{productController.deleteProduct(prod)}">-->
+<!--                                <f:ajax event="click" render="productsForm"/>-->
+<!--                            </h:commandButton>-->
+<!--                        </h:column>-->
                     </h:dataTable>
                 </div>
             </h:form>
