JavaEE.JSF.Добавлен переход на Order в навбар.

--- a/java-ee-jsf/src/main/webapp/index.xhtml
+++ b/java-ee-jsf/src/main/webapp/index.xhtml
@@ -30,6 +30,9 @@
                 <li class="nav-item active">
                     <h:link styleClass="nav-link" value="List" outcome="index"/>
                 </li>
+                <li class="nav-item active">
+                    <h:link styleClass="nav-link" value="Order" outcome="client_order"/>
+                </li>
             </ul>
         </div>
     </nav>
