--- a/java-ee-jsf/src/main/webapp/product.xhtml
+++ b/java-ee-jsf/src/main/webapp/product.xhtml
@@ -41,11 +41,15 @@
             <h:form id="productForm">
                 <div class="form-group">
                     <h:outputLabel value="Name"/>
-                    <h:inputText styleClass="form-control" id="name" value="#{productController.product.name}" placeholder="Enter name"/>
+                    <h:inputText styleClass="form-control" id="name" value="#{productController.product.name}" placeholder="Enter name">
+<!--                        <f:validateBean />-->
+                    </h:inputText>
                 </div>
                 <div class="form-group">
                     <h:outputLabel value="Description"/>
-                    <h:inputText styleClass="form-control" id="description" value="#{productController.product.description}" placeholder="Enter description"/>
+                    <h:inputText styleClass="form-control" id="description" value="#{productController.product.description}" placeholder="Enter description" validatorMessage="Строка не должна быть пустой">
+                        <f:validateRequired />
+                    </h:inputText>
                 </div>
                 <div class="form-group">
                     <h:outputLabel value="Price"/>
