--- a/java-ee-jsf/src/main/webapp/product.xhtml
+++ b/java-ee-jsf/src/main/webapp/product.xhtml
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">List</a>
+                <h:link styleClass="nav-link" value="List" outcome="index"/>
             </li>
         </ul>
     </div>
