--- a/java-ee-jsf/src/main/webapp/product.xhtml
+++ b/java-ee-jsf/src/main/webapp/product.xhtml
@@ -57,6 +57,17 @@
                         <f:converter converterId="javax.faces.BigDecimal"/>
                     </h:inputText>
                 </div>
+                <div class="form-group">
+                    <h:outputLabel value="Category"/>
+                    <h:selectOneListbox size="1" styleClass="form-control" id="productCategory"
+                                        value="#{productController.product.category.id}">
+                        <f:selectItems value="#{productController.allCategories}"
+                                       var="cat"
+                                       itemValue="#{cat.id}"
+                                       itemLabel="#{cat.name}"
+                                       itemLabelEscaped="true"/>
+                    </h:selectOneListbox>
+                </div>
                 <h:commandButton value="Submit" styleClass="btn btn-primary" action="#{productController.saveProduct()}"/>
             </h:form>
         </div>
