--- a/java-ee-jsf/src/main/webapp/product.xhtml
+++ b/java-ee-jsf/src/main/webapp/product.xhtml
@@ -29,7 +29,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <h:link styleClass="nav-link" value="List" outcome="index"/>
+                <a class="nav-link" href="#">List</a>
+            </li>
+            <li class="nav-item active">
+                <h:link styleClass="nav-link" value="List" outcome="cart"/>
             </li>
         </ul>
     </div>
@@ -41,15 +44,11 @@
             <h:form id="productForm">
                 <div class="form-group">
                     <h:outputLabel value="Name"/>
-                    <h:inputText styleClass="form-control" id="name" value="#{productController.product.name}" placeholder="Enter name">
-<!--                        <f:validateBean />-->
-                    </h:inputText>
+                    <h:inputText styleClass="form-control" id="name" value="#{productController.product.name}" placeholder="Enter name"/>
                 </div>
                 <div class="form-group">
                     <h:outputLabel value="Description"/>
-                    <h:inputText styleClass="form-control" id="description" value="#{productController.product.description}" placeholder="Enter description" validatorMessage="Строка не должна быть пустой">
-                        <f:validateRequired />
-                    </h:inputText>
+                    <h:inputText styleClass="form-control" id="description" value="#{productController.product.description}" placeholder="Enter description"/>
                 </div>
                 <div class="form-group">
                     <h:outputLabel value="Price"/>
@@ -60,7 +59,7 @@
                 <div class="form-group">
                     <h:outputLabel value="Category"/>
                     <h:selectOneListbox size="1" styleClass="form-control" id="productCategory"
-                                        value="#{productController.product.category.id}">
+                                        value="#{productController.product.categoryId}">
                         <f:selectItems value="#{productController.allCategories}"
                                        var="cat"
                                        itemValue="#{cat.id}"
